# projeto_final_pds

./: README.md  pyproject.toml
Projeto final/: coeffs_pyfda_lp.csv  fir_lp_pyfda.npz  projeto_final.ipynb
