[tool.poetry]
name = "pds"
version = "0.1.0"
description = ""
authors = ["HemersonRafael <rafaelpontes1995@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
matplotlib = "^3.4.3"
scipy = "^1.7.1"
ipykernel = "^6.2.0"
pyfda = "^0.5.3"
PyQt5 = "^5.15.4"
nbconvert = "^6.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
